# ROS

display_robot_ws/src/display_robot/: CMakeLists.txt  package.xml
display_robot_ws/src/display_robot/Lite3model/Lite3/meshes/: HR_HIP.dae  Lite3.dae
display_robot_ws/src/display_robot/Lite3model/Lite3/urdf/: Lite3.urdf
display_robot_ws/src/display_robot/Lite3model/Lite3L/meshes/: HL_HIP.dae  Lite3L.dae
display_robot_ws/src/display_robot/Lite3model/Lite3L/urdf/: Lite3L.urdf
display_robot_ws/src/display_robot/Lite3model/Lite3P/meshes/: FL_HIP.dae  Lite3P.dae
display_robot_ws/src/display_robot/Lite3model/Lite3P/urdf/: Lite3P.urdf
display_robot_ws/src/display_robot/Lite3model/Lite3V/meshes/: FR_HIP.dae  Lite3V.dae
display_robot_ws/src/display_robot/Lite3model/Lite3V/urdf/: Lite3V.urdf
display_robot_ws/src/display_robot/launch/: display.launch
display_robot_ws/src/display_robot/quadog/meshes/: Body_Link.STL  FLHipX_Link.STL  FLKnee_Link.STL  FRHipY_Link.STL  HLHipX_Link.STL  HLHipY_Link.STL  HRHipY_Link.STL  HRKnee_Link.STL
display_robot_ws/src/display_robot/quadog/urdf/: quadog.urdf
display_robot_ws/src/display_robot/x20/urdf/: JueyingX20.urdf
nav/src/deeprobotics_planning/: CMakeLists.txt  package.xml
nav/src/deeprobotics_planning/action/: Navigation.action
nav/src/deeprobotics_planning/cfg/: navigation.cfg
nav/src/deeprobotics_planning/config/: config.toml
nav/src/deeprobotics_planning/include/: basic_function.h  common.h  nav_base.h  nav_interface.h  nav_mpc.h  nav_sl.h  parameters_config.hpp
nav/src/deeprobotics_planning/include/parameters/: parameters_config.hpp
nav/src/deeprobotics_planning/launch/: plan.launch
nav/src/deeprobotics_planning/src/: basic_function.cpp  nav_interface.cpp  nav_mpc.cpp  nav_node.cpp  nav_sl.cpp  test.cpp
quadog_ws/: readme.md
quadog_ws/src/quadog_control/: manifest.xml
quadog_ws/src/quadog_control/config/: quadog_control_config.yaml
quadog_ws/src/quadog_control/launch/: quadog_control.launch
quadog_ws/src/quadog_control/src/: quadog_controller.py  teleop_controller.py
quadog_ws/src/quadog_control_cpp/: CMakeLists.txt  main.cpp  package.xml  pub_test.cpp
quadog_ws/src/quadog_control_cpp/include/: BalanceController.h  ControlParameters.h  GenericEstimator.h  LegController.h  OrientationEstimator.h  QuaDogController.h  Quadruped.h  RobotController.h  StateEstimatorContainer.h  State_BalanceStand.h  State_Base.h  State_COM_Move.h  State_Init.h  State_JointPD.h  State_LoadForce.h  State_Machine.h  State_StandUp.h  State_Swing.h  State_UnloadForce.h  SwingTrajectory.h  Types.h  quadog.h  quadogControlParameters.h
quadog_ws/src/quadog_control_cpp/msg/: my_msg.msg
quadog_ws/src/quadog_control_cpp/src/: BalanceController.cpp  LegController.cpp  OrientationEstimator.cpp  QuaDogController.cpp  StateEstimatorContainer.cpp  State_BalanceStand.cpp  State_Base.cpp  State_COM_Move.cpp  State_Init.cpp  State_JointPD.cpp  State_LoadForce.cpp  State_Machine.cpp  State_StandUp.cpp  State_Swing.cpp  State_UnloadForce.cpp  SwingTrajectory.cpp
quadog_ws/src/quadog_description/: manifest.xml
quadog_ws/src/quadog_description/P50/meshes/: fl_hip.STL  fl_shank.STL  fl_thigh.STL  fr_hip.STL  fr_shank.STL  fr_thigh.STL  hl_hip.STL  hl_shank.STL  hl_thigh.STL  hr_hip.STL  hr_shank.STL  hr_thigh.STL
quadog_ws/src/quadog_description/P50/urdf/: P50.urdf
quadog_ws/src/quadog_description/X20URDF/urdf/: JueyingX20.urdf
quadog_ws/src/quadog_description/urdf/: quadog.gazebo  quadog.rviz  quadog.xacro  quadog_body_model.xacro  quadog_model.xacro  quadog_sensor_model.xacro  quadog_trans.xacro
quadog_ws/src/quadog_gazebo/: CMakeLists.txt  mainpage.dox  manifest.xml
quadog_ws/src/quadog_gazebo/launch/: p50_rviz_view.launch  quadog_rviz_view.launch  quadog_world_moveit.launch  x20_rviz_view.launch
quadog_ws/src/quadog_gazebo/worlds/: quadog.world
quadog_ws/src/quadog_model/: CMakeLists.txt  package.xml
quadog_ws/src/quadog_model/config/: joint_names_quadog.yaml
quadog_ws/src/quadog_model/launch/: display.launch  gazebo.launch
quadog_ws/src/quadog_model/meshes/: FLHipY_Link.STL  FRHipX_Link.STL  FRKnee_Link.STL  HLKnee_Link.STL  HRHipX_Link.STL
quadog_ws/src/quadog_model/urdf/: quadog.csv
