<?xml version="1.0"?>
<package>
  <name>nav</name>
  <version>0.1.0</version>
  <description>Communication driver</description>
  <license>TODO</license>
  <maintainer email="mazunwang@deeprobotics.cn">MaZunWang</maintainer>
  <author email="mazunwang@deeprobotics.cn">MaZunWang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <!-- <run_depend>tf</run_depend> -->
  <run_depend>message_runtime</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
</package>
